--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,9 @@
 <form>
-  
+  <form method="POST" action="/team">
+     
+     <label for="name">Team Name:</label>
+     <input type="text" name="name"></br></br>
+      
   
   
   
