automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <form>
-  <form method="POST" action="/team">
+  <form method="POST" action="/cart">
      
-     <label for="name">Team Name:</label>
-     <input type="text" name="name"></br></br>
-      
+     <label for="name">Cart Item:</label>
+     <input type="text" name="cart"></br></br>
+        <input type="submit" id="Submit">
   
   
   
