--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-  <form method="POST" action="/cart">
+  <form method="POST" action="/checkout">
      
      <label for="name">Cart Item:</label>
      <input type="text" name="cart"></br></br>
