automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,5 @@
      
      <label for="item">Cart Item:</label>
      <input type="text" name="item"></br></br>
-        <input type="submit" id="Submit">
+        <input type="submit" id="Submit" value="submit">
 </form>
