--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-
+  <form method="POST" action="/checkout">
+     
+     <label for="item">Cart Item:</label>
+     <input type="text" name="item"></br></br>
+        <input type="submit" id="Submit" value="submit">
+</form>
